force-app/main/default/objects/Message_Action__c/Message_Action__c.object-meta.xml
<CustomObject>
    <label>Message Action</label>
    <nameField>
        <label>Message Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Actions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>