force-app/main/default/objects/Message_Action__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Team Channel Endpoint</description>
    <label>Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>