force-app/main/default/objects/Message_Action__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message Type</label>
    <referenceTo>Message_Type__c</referenceTo>
    <relationshipLabel>Message Actions</relationshipLabel>
    <relationshipName>Message_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>