force-app/main/default/objects/Message_Action__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Interation</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>MS Team Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>